--- a/back-end/src/package.json
+++ b/back-end/src/package.json
@@ -14,6 +14,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-promise-router": "^4.1.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0"
   }
