--- a/back-end/src/package.json
+++ b/back-end/src/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.592.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.0"
   }
