--- a/back-end/src/package.json
+++ b/back-end/src/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.592.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -19,6 +20,8 @@
     "express-promise-router": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.0"
+    "mysql2": "^3.10.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14"
   }
 }
